--- a/here/package.json
+++ b/here/package.json
@@ -9,15 +9,17 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^4.3.1",
     "astro": "^5.16.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@astrojs/react": "^3.0.0",
+    "@astrojs/react": "^3.6.3",
     "@tailwindcss/postcss": "^4.1.17",
     "autoprefixer": "^10.4.22",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.17"
+    "tailwindcss": "^4.1.17",
+    "typescript": "^5.9.3"
   }
 }
